intern/cycles/kernel/geom/geom_volume.h
@@ -72,14 +72,22 @@ ccl_device float4 volume_attribute_float4(KernelGlobals *kg,
                                           const ShaderData *sd,
                                           const AttributeDescriptor desc)
 {
-  /* todo: optimize this so we don't have to transform both here and in
-   * kernel_tex_image_interp_3d when possible. Also could optimize for the
-   * common case where transform is translation/scale only. */
-  float3 P = sd->P;
-  object_inverse_position_transform(kg, sd, &P);
-  InterpolationType interp = (sd->flag & SD_VOLUME_CUBIC) ? INTERPOLATION_CUBIC :
-                                                            INTERPOLATION_NONE;
-  return kernel_tex_image_interp_3d(kg, desc.offset, P, interp);
+  if (desc.element & (ATTR_ELEMENT_OBJECT | ATTR_ELEMENT_MESH)) {
+    return kernel_tex_fetch(__attributes_float3, desc.offset);
+  }
+  else if (desc.element == ATTR_ELEMENT_VOXEL) {
+    /* todo: optimize this so we don't have to transform both here and in
+     * kernel_tex_image_interp_3d when possible. Also could optimize for the
+     * common case where transform is translation/scale only. */
+    float3 P = sd->P;
+    object_inverse_position_transform(kg, sd, &P);
+    InterpolationType interp = (sd->flag & SD_VOLUME_CUBIC) ? INTERPOLATION_CUBIC :
+                                                              INTERPOLATION_NONE;
+    return kernel_tex_image_interp_3d(kg, desc.offset, P, interp);
+  }
+  else {
+    return make_float4(0.0f, 0.0f, 0.0f, 0.0f);
+  }
 }
 
 #endif
