intern/cycles/kernel/kernel_shader.h
@@ -1268,6 +1268,7 @@ ccl_device_inline void shader_eval_volume(KernelGlobals *kg,
   sd->num_closure_left = max_closures;
   sd->flag = 0;
   sd->object_flag = 0;
+  sd->type = PRIMITIVE_VOLUME;
 
   for (int i = 0; stack[i].shader != SHADER_NONE; i++) {
     /* setup shaderdata from stack. it's mostly setup already in
